@@ -19,11 +19,34 @@
 #include "x/w/canvas.H"
 #include "x/w/scrollbar.H"
 #include "x/w/scrollbar_appearance.H"
+#include "x/w/listlayoutmanager.H"
+#include "testscrollbar.inc.H"
 #include <string>
 #include <iostream>
+#include <set>
+
+static LIBCXX_NAMESPACE::mpcobj<bool> has_scrolled;
+static LIBCXX_NAMESPACE::mpcobj<bool> idled;
+static LIBCXX_NAMESPACE::mpcobj<bool> scrollbar_drawn;
+
+#define DEBUG_SCROLL() do {				\
+		has_scrolled=true;			\
+	} while(0)
+
+#include "peephole/peephole_layoutmanager_impl.C"
+
+#undef DEBUG_SCROLL
+#define DEBUG_SCROLL() do {				\
+		scrollbar_drawn=true;			\
+	} while(0)
+
+#include "scrollbar/scrollbar_impl.C"
+
 
 using namespace LIBCXX_NAMESPACE;
 using namespace LIBCXX_NAMESPACE::w;
+
+static LIBCXX_NAMESPACE::mpcobj<std::set<dim_t>> sizes;
 
 class close_flagObj : public obj {
 
@@ -102,13 +125,230 @@ void testscrollbar()
 	lock.wait_for(std::chrono::seconds{30}, [&] { return *lock; });
 }
 
+void testscroll1()
+{
+	destroy_callback::base::guard guard;
+
+	auto close_flag=close_flag_ref::create();
+
+	auto main_window=main_window::create
+		([&]
+		 (const auto &main_window)
+		 {
+			 gridlayoutmanager
+				 layout=main_window->get_layoutmanager();
+
+			 auto factory=layout->append_row();
+
+
+			 factory->create_focusable_container
+				 ([&]
+				  (const auto &l)
+				  {
+					  listlayoutmanager layout=
+						  l->get_layoutmanager();
+
+					  layout->append_items
+						  ({"Lorem",
+						    "Ipsum",
+						    "Dolor",
+						    "Sit",
+						    "Amet"});
+				  },
+				  new_listlayoutmanager{});
+			 });
+
+	main_window->set_window_title("Testing");
+
+	guard(main_window->connection_mcguffin());
+
+	main_window->on_disconnect([]
+				   {
+					   _exit(1);
+				   });
+
+	main_window->on_delete
+		([close_flag]
+		 (THREAD_CALLBACK,
+		  const auto &ignore)
+		 {
+			 close_flag->close();
+		 });
+
+	main_window->show_all();
+
+	main_window->in_thread_idle
+		([main_window, close_flag]
+		 (ONLY IN_THREAD)
+		 {
+			 focusable_container l=
+				 gridlayoutmanager{main_window
+						   ->get_layoutmanager()
+			 }->get(0, 0);
+
+			 listlayoutmanager ll=l->get_layoutmanager();
+
+			 has_scrolled=false;
+			 ll->autoselect(IN_THREAD, 4,
+					static_cast<key_event *>(nullptr));
+
+			 close_flag->close();
+		 });
+
+	mpcobj<bool>::lock lock{close_flag->flag};
+
+	lock.wait_for(std::chrono::seconds{30}, [&] { return *lock; });
+
+	if (!has_scrolled.get())
+		throw EXCEPTION("Did not scroll");
+}
+
+static void wait_for_idle(const main_window &mw)
+{
+	mpcobj<bool>::lock lock{idled};
+
+	*lock=false;
+
+	mw->in_thread_idle([]
+			   (ONLY IN_THREAD)
+			   {
+				   mpcobj<bool>::lock lock{idled};
+
+				   *lock=true;
+
+				   lock.notify_all();
+			   });
+
+	lock.wait([&]{ return *lock; });
+}
+
+
+void testscroll2()
+{
+	scrollbar_drawn=false;
+
+	destroy_callback::base::guard guard;
+
+	auto close_flag=close_flag_ref::create();
+
+	auto main_window=main_window::create
+		([&]
+		 (const auto &main_window)
+		 {
+			 gridlayoutmanager
+				 layout=main_window->get_layoutmanager();
+
+			 auto factory=layout->append_row();
+
+
+			 factory->create_focusable_container
+				 ([&]
+				  (const auto &l)
+				  {
+					  listlayoutmanager layout=
+						  l->get_layoutmanager();
+
+					  layout->append_items
+						  ({"Lorem",
+						    "Ipsum"});
+				  },
+				  new_listlayoutmanager{});
+			 });
+
+	main_window->set_window_title("Testing");
+
+	guard(main_window->connection_mcguffin());
+
+	main_window->on_disconnect([]
+				   {
+					   _exit(1);
+				   });
+
+	main_window->on_delete
+		([close_flag]
+		 (THREAD_CALLBACK,
+		  const auto &ignore)
+		 {
+			 close_flag->close();
+		 });
+
+	main_window->show_all();
+
+	wait_for_idle(main_window);
+
+	main_window->hide_all();
+
+	wait_for_idle(main_window);
+
+	main_window->on_state_update
+		([]
+		 (ONLY IN_THREAD,
+		  const auto &state,
+		  const auto &busy)
+		 {
+			 mpcobj<std::set<dim_t>>::lock lock{sizes};
+
+			 if (lock->insert(state.current_position.width).second)
+				 lock.notify_all();
+		 });
+
+	{
+		focusable_container l=
+			gridlayoutmanager{main_window
+					  ->get_layoutmanager()
+		}->get(0, 0);
+
+		listlayoutmanager ll=l->get_layoutmanager();
+
+		ll->append_items({
+				  "Dolor",
+				  "Sit",
+				  "Amet"});
+	}
+
+	wait_for_idle(main_window);
+
+	if (scrollbar_drawn.get())
+		throw EXCEPTION("Scrollbar drawn prematurely");
+
+	main_window->show_all();
+
+	{
+		mpcobj<std::set<dim_t>>::lock lock{sizes};
+
+		lock.wait_for(std::chrono::seconds(30),
+			      [&]
+			      {
+				      return lock->size() == 2;
+			      });
+	}
+	wait_for_idle(main_window);
+
+	if (!scrollbar_drawn.get())
+		throw EXCEPTION("Scrollbar wasn't drawn");
+}
+
+
 int main(int argc, char **argv)
 {
 	try {
 		LIBCXX_NAMESPACE::property
 			::load_property(LIBCXX_NAMESPACE_STR "::themes",
 					"themes", true, true);
-		testscrollbar();
+
+		testscrollbar_options options;
+
+		options.parse(argc, argv);
+
+		if (options.testscroll->value)
+		{
+			testscroll1();
+			testscroll2();
+		}
+		else
+		{
+			testscrollbar();
+		}
 	} catch (const exception &e)
 	{
 		e->caught();
