@@ -1,3 +1,8 @@
+2020-02-16  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Using a key/button to select a list item explicitly scrolls it into
+	view.
+
 2019-11-30  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* In standard and editable combo-boxes, rename selection_changed()
